<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="eu.mg_dev.strp.activities.LanguageDialogActivity"
    android:orientation="vertical">

    <Button
        android:text="@string/lang_nl"
        android:enabled="true"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:onClick="goAgeSelector"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:text="@string/lang_en"
        android:enabled="false"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <Button
        android:text="@string/lang_du"
        android:enabled="false"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <Button
        android:text="@string/lang_es"
        android:enabled="false"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

</LinearLayout>
