<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="eu.mg_dev.strp.MainActivity"
    android:weightSum="1"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:layout_width="140dp"
            android:layout_height="110dp"
            android:text="@string/photos"
            android:drawableTop="@drawable/ic_camera_roll_black_48dp"
            android:paddingLeft="40dp"
            android:paddingTop="17dp"
            android:paddingRight="40dp"
            android:paddingBottom="17dp"/>

        <Button
            android:layout_width="140dp"
            android:layout_height="110dp"
            android:text="@string/sounds"
            android:drawableTop="@drawable/ic_speaker_group_black_48dp"
            android:paddingLeft="40dp"
            android:paddingTop="17dp"
            android:paddingRight="40dp"
            android:paddingBottom="17dp"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:layout_width="140dp"
            android:layout_height="110dp"
            android:text="@string/camera"
            android:drawableTop="@drawable/ic_camera_alt_black_48dp"
            android:paddingLeft="40dp"
            android:paddingTop="17dp"
            android:paddingRight="40dp"
            android:paddingBottom="17dp"/>

        <Button
            android:layout_width="140dp"
            android:layout_height="110dp"
            android:text="@string/voice"
            android:drawableTop="@drawable/ic_keyboard_voice_black_48dp"
            android:paddingLeft="40dp"
            android:paddingTop="17dp"
            android:paddingRight="40dp"
            android:paddingBottom="17dp"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:layout_width="310dp"
            android:layout_height="110dp"
            android:text="@string/finish"
            android:drawableTop="@drawable/ic_view_comfy_black_48dp"
            android:paddingLeft="40dp"
            android:paddingTop="17dp"
            android:paddingRight="40dp"
            android:paddingBottom="17dp"/>
    </LinearLayout>

</LinearLayout>
